added prettier, eslint

--- a/package.json
+++ b/package.json
@@ -1,20 +1,35 @@
 {
-  "name": "my-razzle-app",
-  "version": "1.0.0",
-  "license": "MIT",
-  "scripts": {
-    "start": "razzle start -type=spa",
-    "build": "razzle build --type=spa",
-    "start:prod": "serve -s build/public"
-  },
-  "dependencies": {
-    "express": "^4.17.1",
-    "razzle-plugin-typescript": "^3.3.7",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
-  },
-  "devDependencies": {
-    "razzle": "^3.3.7"
-  }
+    "name": "boilerplate-based-on-razzle",
+    "version": "1.0.0",
+    "license": "MIT",
+    "scripts": {
+        "start": "razzle start -type=spa",
+        "build": "razzle build --type=spa",
+        "start:prod": "serve -s build/public",
+        "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+        "prettier": "prettier --write ."
+    },
+    "dependencies": {
+        "effector": "^21.5.0",
+        "effector-react": "^21.0.6",
+        "express": "^4.17.1",
+        "razzle-plugin-typescript": "^3.3.7",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-router-dom": "^5.2.0"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^4.5.0",
+        "@typescript-eslint/parser": "^4.5.0",
+        "eslint": "^7.12.0",
+        "eslint-config-prettier": "^6.14.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.3.1",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-react": "^7.21.5",
+        "prettier": "^2.1.2",
+        "razzle": "^3.3.7",
+        "razzle-plugin-eslint": "^3.3.7",
+        "typescript": "^4.0.3"
+    }
 }
