--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
         "react-router-dom": "^5.2.0"
     },
     "devDependencies": {
+        "@types/node": "^14.14.2",
+        "@types/react": "^16.9.53",
+        "@types/react-dom": "^16.9.8",
+        "@types/react-router-dom": "^5.1.6",
         "@typescript-eslint/eslint-plugin": "^4.5.0",
         "@typescript-eslint/parser": "^4.5.0",
         "eslint": "^7.12.0",
