--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "license": "MIT",
     "scripts": {
-        "start": "razzle start -type=spa",
+        "start": "razzle start --type=spa",
         "build": "razzle build --type=spa",
         "start:prod": "serve -s build/public",
         "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
@@ -31,6 +31,7 @@
         "eslint-plugin-jsx-a11y": "^6.3.1",
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-react": "^7.21.5",
+        "path": "^0.12.7",
         "prettier": "^2.1.2",
         "razzle": "^3.3.7",
         "razzle-plugin-eslint": "^3.3.7",
