--- a/package.json
+++ b/package.json
@@ -31,10 +31,23 @@
         "eslint-plugin-jsx-a11y": "^6.3.1",
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-react": "^7.21.5",
+        "husky": ">=4",
+        "lint-staged": "^10.4.2",
         "path": "^0.12.7",
         "prettier": "^2.1.2",
         "razzle": "^3.3.7",
         "razzle-plugin-eslint": "^3.3.7",
         "typescript": "^4.0.3"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{js, ts, tsx}": [
+            "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+            "prettier --write ."
+        ]
     }
 }
