--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "prettier": "prettier --write ."
     },
     "dependencies": {
+        "clsx": "^1.1.1",
         "effector": "^21.5.0",
         "effector-react": "^21.0.6",
         "razzle-plugin-typescript": "^3.3.7",
@@ -36,6 +37,7 @@
         "prettier": "^2.1.2",
         "razzle": "^3.3.7",
         "razzle-plugin-eslint": "^3.3.7",
+        "razzle-plugin-scss": "^3.3.7",
         "typescript": "^4.0.3"
     },
     "husky": {
