--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     },
     "dependencies": {
         "clsx": "^1.1.1",
+        "date-fns": "^2.16.1",
         "effector": "^21.5.0",
         "effector-react": "^21.0.6",
         "razzle-plugin-typescript": "^3.3.7",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "react-router-dom": "^5.2.0"
+        "react-router-dom": "^5.2.0",
+        "react-spring": "^8.0.27"
     },
     "devDependencies": {
         "@types/node": "^14.14.2",
