--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dependencies": {
         "clsx": "^1.1.1",
         "d3-ease": "^2.0.0",
-        "date-fns": "^2.16.1",
+        "dayjs": "^1.10.4",
         "effector": "^21.5.0",
         "effector-react": "^21.0.6",
         "preact": "^10.5.12",
@@ -20,6 +20,7 @@
         "react-router-dom": "^5.2.0"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.13.8",
         "@types/d3-ease": "^2.0.0",
         "@types/node": "^14.14.2",
         "@types/react-router-dom": "^5.1.6",
