--- a/package.json
+++ b/package.json
@@ -3,46 +3,54 @@
     "version": "1.0.0",
     "license": "MIT",
     "scripts": {
-        "start": "razzle start --type=spa",
-        "build": "razzle build --type=spa",
+        "start": "razzle start",
+        "build": "razzle build --noninteractive",
         "start:prod": "serve -s build/public",
         "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
         "prettier": "prettier --write ."
     },
     "dependencies": {
-        "clsx": "^1.1.1",
-        "d3-ease": "^2.0.0",
-        "dayjs": "^1.10.4",
-        "effector": "^21.5.0",
-        "effector-react": "^21.0.6",
-        "preact": "^10.5.12",
-        "react-move": "^6.4.0",
-        "react-router-dom": "^5.2.0"
+        "clsx": "^1.2.1",
+        "d3-ease": "^3.0.1",
+        "dayjs": "^1.11.6",
+        "effector": "^22.4.0",
+        "effector-react": "^22.3.4",
+        "preact": "^10.11.3",
+        "react-move": "^6.5.0"
     },
     "devDependencies": {
-        "@babel/preset-env": "^7.13.8",
-        "@types/d3-ease": "^2.0.0",
-        "@types/node": "^14.14.2",
-        "@types/react-router-dom": "^5.1.6",
-        "@typescript-eslint/eslint-plugin": "^4.5.0",
-        "@typescript-eslint/parser": "^4.5.0",
+        "@babel/preset-env": "^7.20.2",
+        "@types/d3-ease": "^3.0.0",
+        "@types/node": "^18.11.9",
+        "@types/react-router-dom": "^5.3.3",
+        "@typescript-eslint/eslint-plugin": "^5.44.0",
+        "@typescript-eslint/parser": "^5.44.0",
         "babel-plugin-transform-react-jsx": "^6.24.1",
-        "eslint": "^7.12.0",
-        "eslint-config-prettier": "^6.14.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jsx-a11y": "^6.3.1",
-        "eslint-plugin-prettier": "^3.1.4",
-        "eslint-plugin-react": "^7.21.5",
-        "husky": ">=4",
-        "lint-staged": "^10.4.2",
+        "babel-preset-razzle": "^4.2.18",
+        "eslint": "^8.28.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-flowtype": "^8.0.3",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jsx-a11y": "^6.6.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.31.11",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "html-webpack-plugin": "5.2.0",
+        "husky": ">=8.0.2",
+        "lint-staged": "^13.0.4",
+        "mini-css-extract-plugin": "0.9.0",
         "path": "^0.12.7",
-        "prettier": "^2.1.2",
-        "razzle": "^3.3.7",
-        "razzle-plugin-bundle-analyzer": "^4.0.0-canary.15",
-        "razzle-plugin-eslint": "^3.3.7",
-        "razzle-plugin-scss": "^3.3.7",
-        "razzle-plugin-typescript": "^3.3.7",
-        "typescript": "^4.0.3"
+        "postcss": "8.2.4",
+        "prettier": "^2.8.0",
+        "razzle": "^4.2.18",
+        "razzle-dev-utils": "^4.2.18",
+        "razzle-plugin-bundle-analyzer": "^4.2.18",
+        "razzle-plugin-eslint": "^4.2.18",
+        "razzle-plugin-scss": "^4.2.18",
+        "razzle-plugin-typescript": "^4.2.18",
+        "typescript": "^4.9.3",
+        "webpack": "5.65.0",
+        "webpack-dev-server": "3.11.0"
     },
     "husky": {
         "hooks": {
